[gd_scene load_steps=16 format=2]

[ext_resource path="res://Images/boulderCreationSheet.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Hitbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Bolder.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 200, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 400, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 600, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 800, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 1000, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 1200, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 1200, 0, 200, 200 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 8 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=10]
radius = 8.0

[sub_resource type="CircleShape2D" id=11]
radius = 11.0

[sub_resource type="CircleShape2D" id=12]

[node name="Bolder" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -1, 0 )
scale = Vector2( 0.175, 0.18 )
frames = SubResource( 9 )
animation = "idle"
speed_scale = 3.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, -1 )
shape = SubResource( 10 )

[node name="Hitbox" parent="." instance=ExtResource( 2 )]
collision_mask = 24

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( -1, -1 )
shape = SubResource( 11 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -1, -1 )
shape = SubResource( 12 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
